Remove obsolete and removed AggressiveOpts JVM flag